updated css comments, removed empty html classes

--- a/style.css
+++ b/style.css
@@ -214,17 +214,7 @@ font-size: 44px;
 }
 
 
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-
-
-/*--------------------------------Quries-----------------------------------*/
+/*-------------------------------- Media Quries-----------------------------------*/
 
 /*  Desktop */
 @media (max-width: 1380px) {
@@ -259,11 +249,6 @@ font-size: 44px;
 		top: 1900px;
 	}
 }
-
-/*--------------------------------Keyframes----------------------------------*/
-
-
-
 
 /* tablet */
 @media (max-width: 850px) {
