--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 html {
     scroll-behavior: smooth;
 }
-
 body {
 	margin: 0;
 	padding: 0;
@@ -152,6 +151,10 @@ font-size: 44px;
 .link-title a:hover {
 	opacity: 1;
 	transition: 0.25s;
+}
+
+.link-sec {
+	overflow-y: hidden;
 }
 
 /*-------------------------------SVGS--------------------------------*/
@@ -316,3 +319,21 @@ font-size: 44px;
         margin: 0 0.5rem 0 0.5rem;
     }
 }
+
+/* Scrollbar  */
+
+/* width */
+::-webkit-scrollbar {
+	width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 2px grey; 
+	background: #fff;
+}
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+	background: #000;
+  }
